--- a/src/index.css
+++ b/src/index.css
@@ -134,6 +134,9 @@ body {
   /* background-image: linear-gradient(to top, #4fb576 0%, #44c489 30%, #28a9ae 46%, #28a2b7 59%, #4c7788 71%, #6c4f63 86%, #432c39 100%); */
   /* background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%); */
 }
+.home * {
+  outline-offset: 4px;
+}
 .about {
   grid-area: about;
 }
